--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "author": "HarrisonHenri <harrisonhenrisn@onyo.com>",
   "license": "MIT",
   "dependencies": {
-    "git-commit-msg-linter": "^3.0.0"
+  },
+  "devDependencies": {
+    "git-commit-msg-linter": "^3.0.0",
+    "@types/node": "^14.11.2",
+    "typescript": "^4.0.3"
   }
 }
