--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "author": "HarrisonHenri <harrisonhenrisn@onyo.com>",
   "license": "MIT",
   "dependencies": {},
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
+    "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "eslint": "^7.10.0",
@@ -16,7 +20,9 @@
     "eslint-plugin-standard": "^4.0.1",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.0",
+    "jest": "^26.4.2",
     "lint-staged": "^10.4.0",
+    "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   }
 }
