--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,9 +13,9 @@
   //   "cypress/globals": true
   // },
   // "plugins": ["react", "cypress"],
-  // "parserOptions": {
-  //   "project": "./tsconfig-eslint.json"
-  // },
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
   "rules": {
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/strict-boolean-expressions": "off"
