--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "dependencies": {},
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:staged": "yarn test --findRelatedTests"
   },
   "devDependencies": {
     "@types/jest": "^26.0.14",
