--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {},
   "scripts": {
     "test": "jest",
-    "test:staged": "yarn test --findRelatedTests"
+    "test:staged": "yarn test -- --findRelatedTests"
   },
   "devDependencies": {
     "@types/jest": "^26.0.14",
