--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "author": "HarrisonHenri <harrisonhenrisn@onyo.com>",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "@types/faker": "^5.1.2"
+  },
   "scripts": {
     "test": "jest --passWithNoTests",
     "test:watch": "yarn test -- --watch",
