--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "main": "index.js",
   "author": "HarrisonHenri <harrisonhenrisn@onyo.com>",
   "license": "MIT",
-  "dependencies": {
-    "@types/faker": "^5.1.2"
-  },
+  "dependencies": {},
   "scripts": {
     "test": "jest --passWithNoTests",
     "test:watch": "yarn test -- --watch",
@@ -14,6 +12,7 @@
     "test:ci": "yarn test -- --coverage"
   },
   "devDependencies": {
+    "@types/faker": "^5.1.2",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
@@ -23,6 +22,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "faker": "^5.1.0",
     "git-commit-msg-linter": "^2.7.0",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
