--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "author": "HarrisonHenri <harrisonhenrisn@onyo.com>",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.20.0"
+  },
   "scripts": {
     "test": "jest --passWithNoTests",
     "test:watch": "yarn test -- --watch",
