--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "HarrisonHenri <harrisonhenrisn@onyo.com>",
   "license": "MIT",
   "dependencies": {
-    "@types/axios": "^0.14.0",
-    "axios": "^0.20.0"
+    "axios": "^0.20.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "scripts": {
     "test": "jest --passWithNoTests",
@@ -15,9 +16,12 @@
     "test:ci": "yarn test -- --coverage"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^5.1.2",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
+    "@types/react": "^16.9.51",
+    "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "eslint": "^7.9.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
