--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.20.0",
+    "eslint-plugin-react": "^7.21.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "dev:base": "webpack-dev-server --config webpack.dev.js",
+    "dev": "npm run dev:base -- --open",
+    "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "yarn test -- --watch",
     "test:staged": "yarn test -- --findRelatedTests",
     "test:ci": "yarn test -- --coverage"
@@ -23,6 +26,7 @@
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.9.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-plugin-import": "^2.22.0",
