--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "axios": "^0.20.0",
     "eslint-plugin-react": "^7.21.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0"
   },
   "scripts": {
-    "dev:base": "webpack-dev-server --config webpack.dev.js",
-    "dev": "npm run dev:base -- --open",
+    "dev:base": "webpack-dev-server",
+    "dev": "yarn run dev:base -- --open",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "yarn test -- --watch",
     "test:staged": "yarn test -- --findRelatedTests",
@@ -39,8 +40,9 @@
     "husky": "^4.3.0",
     "jest": "^26.4.2",
     "lint-staged": "^10.4.0",
-    "node-loader": "^1.0.1",
+    "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
+    "style-loader": "^1.3.0",
     "ts-jest": "^26.4.0",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
