--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:ci": "yarn test -- --coverage"
   },
   "devDependencies": {
+    "@testing-library/react": "^11.0.4",
     "@types/axios": "^0.14.0",
     "@types/faker": "^5.1.2",
     "@types/jest": "^26.0.14",
@@ -40,6 +41,7 @@
     "faker": "^5.1.0",
     "git-commit-msg-linter": "^2.7.0",
     "husky": "^4.3.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.4.2",
     "lint-staged": "^10.4.0",
     "node-sass": "^4.14.1",
