--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-spinners": "^0.9.0"
   },
   "scripts": {
     "dev:base": "webpack-dev-server",
@@ -43,6 +44,7 @@
     "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.4.2",
+    "jest-localstorage-mock": "^2.4.3",
     "lint-staged": "^10.4.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
