--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,13 +6,13 @@
   },
   "extends": [
     "standard-with-typescript",
-    "plugin:react/recommended"
-    // "plugin:cypress/recommended"
+    "plugin:react/recommended",
+    "plugin:cypress/recommended"
   ],
-  // "env": {
-  //   "cypress/globals": true
-  // },
-  "plugins": ["react"],
+  "env": {
+    "cypress/globals": true
+  },
+  "plugins": ["react", "cypress"],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
