--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.20.0",
     "eslint-plugin-react": "^7.21.3",
+    "express": "^4.17.1",
+    "express-history-api-fallback": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-spinners": "^0.9.0"
   },
   "scripts": {
-    "dev:base": "webpack-dev-server",
+    "start": "node index",
+    "dev:base": "webpack-dev-server --config webpack.dev.js",
     "dev": "yarn run dev:base -- --open",
+    "build": "webpack --config webpack.prod.js",
     "test": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "yarn test -- --watch",
     "test:staged": "yarn test -- --findRelatedTests",
@@ -50,11 +54,13 @@
     "faker": "^5.1.0",
     "full-icu": "^1.3.1",
     "git-commit-msg-linter": "^2.7.0",
+    "html-webpack-plugin": "^4.5.0",
     "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.4.2",
     "jest-localstorage-mock": "^2.4.3",
     "lint-staged": "^10.4.0",
+    "mini-css-extract-plugin": "^1.2.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.3.0",
@@ -63,6 +69,7 @@
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.3.0"
   }
 }
