--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ cache:
 script:
   - eslint 'src/**'
   - npm run test:coveralls
+  - npm run test:cypress:ci
 deploy:
   provider: heroku
   api_key: $HEROKU_API
