--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clean-react",
-  "version": "1.6.1",
+  "version": "1.6.2",
   "main": "index.js",
   "author": "HarrisonHenri <harrisonhenrisn@onyo.com>",
   "license": "MIT",
@@ -26,6 +26,8 @@
     "test:ci": "yarn test -- --coverage",
     "test:coveralls": "yarn run test:ci && coveralls < coverage/lcov.info",
     "test:cypress": "cypress open",
+    "test:cypress:run": "cypress run",
+    "test:cypress:ci": "start-server-and-test dev:base http-get://localhost:8080 test:cypress:run",
     "check": "yarn upgrade-interactive"
   },
   "devDependencies": {
@@ -52,6 +54,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "faker": "^5.1.0",
+    "favicons-webpack-plugin": "^4.2.0",
     "full-icu": "^1.3.1",
     "git-commit-msg-linter": "^2.7.0",
     "html-webpack-plugin": "^4.5.0",
@@ -63,6 +66,7 @@
     "mini-css-extract-plugin": "^1.2.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
+    "start-server-and-test": "^1.11.5",
     "style-loader": "^1.3.0",
     "ts-jest": "^26.4.0",
     "ts-loader": "^8.0.4",
