--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ cache:
     - ~/.cache
 script:
   - eslint 'src/**'
-  - npm run test:coveralls
   - npm run test:cypress:ci
+after_success:
+  - npm run test:coveralls
 deploy:
   provider: heroku
   api_key: $HEROKU_API
