--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-spinners": "^0.9.0"
+    "react-spinners": "^0.9.0",
+    "recoil": "^0.3.1"
   },
   "scripts": {
     "start": "node index",
